--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,55 @@
-   body {
-     padding: 10px;
-     margin: 20px;
-     font: bold 3.1em Helvetica, Arial, sans-serif;
-     background-color: #FFF;
-   }
+body {
+	padding: 10px;
+	margin: 20px;
+	font: bold 3.1em Helvetica, Arial, sans-serif;
+	background-color: #404040;
+}
 
-   section, header, footer, aside, nav, article, figure {
-     display: block;
-   }
 
-   article {
-       color: #FFF;
-       background-color: gray;
-       float: left;
-       padding: 40px;
-       margin: 20px;
-       -moz-box-shadow: 5px 5px 5px #333333;
-       -webkit-box-shadow: 5px 5px 11px #333333;
-       -o-box-shadow: 5px 5px 11px #333333;
-       -ms-box-shadow: 5px 5px 11px #333333;
-       box-shadow: 5px 5px 11px #333333;
-       border-radius: 15px;
-       font-size: 2em;
-   }
-			
-	.disabled, .aborted{
-		
-	}
-		
+section, header, footer, aside, nav, article, figure {
+	display: block;
+}
+
+article {
+	color: #FFF;
+	background-color: gray;
+	float: left;
+	padding: 40px;
+	margin: 20px;
+	-moz-box-shadow: 5px 5px 5px #333333;
+	-webkit-box-shadow: 5px 5px 11px #333333;
+	-o-box-shadow: 5px 5px 11px #333333;
+	-ms-box-shadow: 5px 5px 11px #333333;
+	box-shadow: 5px 5px 11px #333333;
+	border-radius: 15px;
+	font-size: 2em;
+}
+.mirror article {
+	float: right;
+}
+
+.disabled, .aborted{
+
+}
+
 .blue {
-    background:#749a02;
+	background:#749a02;
 }
 
 .blue_anime, .red_anime, .yellow_anime, .aborted_anime {
-    background: #3861b6;
+	background: #3861b6;
 }
 .yellow {
 	color: black;
 	background: yellow;
 }
 .red{
-    background: #a01208;
+	background: #a01208;
 }
 .time{
 	font-size:1.5em;
 	background: none;
-	color: black;
+	color: gray;
 	box-shadow: none;
 }
 
@@ -68,10 +72,10 @@
 	to { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333;   -webkit-box-shadow: 5px 5px 11px #333333;}
 }
 #sound{
-  margin: auto;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
